fix: firefox doesnt like prewrap css class

--- a/src/app/components/dialogs/apiMetadataDialog/apiMetadataDialog.component.scss
+++ b/src/app/components/dialogs/apiMetadataDialog/apiMetadataDialog.component.scss
@@ -10,7 +10,7 @@
 }
 .mdc-list-item__secondary-text {
   word-wrap: break-word !important;
-  white-space: pre-wrap !important;
+  white-space: normal !important;
 }
 .mat-mdc-list-item.mdc-list-item--with-three-lines {
   height: initial !important;
